--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,18 +14,26 @@ jobs:
       matrix:
         node-version: [ '18.x', '19.x', '20.x', '21.x', '22.x', '23.x' ]
     steps:
-      - uses: actions/checkout@v3
+      - name: Check out code
+        uses: actions/checkout@v3
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
 
+      # Ensure Corepack is enabled so Yarn is recognized
+      - name: Enable Corepack
+        run: corepack enable
+
       - name: Install dependencies
-        run: npm install
+        run: yarn install
+
+      - name: Lint code
+        run: yarn lint
 
       - name: Build project
-        run: npm run build
+        run: yarn build
 
       - name: Test project
-        run: npm test
+        run: yarn test
