--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^15.14.0",
+    "jest": "^29.7.0",
     "jsdom": "^26.0.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
