--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,6 @@ on:
     branches:
       - 'feature/*'
 
-# Cancel any previous runs for the same ref when a new run is started
 concurrency: ${{ github.ref }}
 
 jobs:
@@ -22,15 +21,13 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
-          cache: 'yarn'
-          cache-dependency-path: '**/yarn.lock'
+          # Removed the 'cache' lines completely
 
-      - name: Enable Corepack
-        run: corepack enable
-
-      # Explicitly prepare Yarn 4.6.0 per package.json
-      - name: Prepare Yarn
-        run: corepack prepare yarn@4.6.0 --activate
+      - name: Install Yarn 4 globally & enable Corepack
+        run: |
+          npm install -g corepack yarn@4.6.0
+          corepack enable
+          yarn --version  # Debug to confirm it’s 4.6.0
 
       - name: Install dependencies
         run: yarn install
@@ -53,15 +50,13 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
-          cache-dependency-path: '**/yarn.lock'
+          # Removed the 'cache' lines completely
 
-      - name: Enable Corepack
-        run: corepack enable
-
-      # Again, explicitly prepare Yarn
-      - name: Prepare Yarn
-        run: corepack prepare yarn@4.6.0 --activate
+      - name: Install Yarn 4 globally & enable Corepack
+        run: |
+          npm install -g corepack yarn@4.6.0
+          corepack enable
+          yarn --version  # Debug to confirm it’s 4.6.0
 
       - name: Install dependencies
         run: yarn install
@@ -71,4 +66,3 @@ jobs:
 
       - name: Test project
         run: yarn test
-# Trigger new workflow run
